testsuite/escript/classes/fail-static-undefined.err
fail-static-undefined.src:2:34: error: Unknown identifier 'staticVar'.