testsuite/escript/classes/fail-static-undefined.src
// TODO scope it correctly to Animal::staticVar
print( $"Global scope staticVar={staticVar}" );

class Animal
  var staticVar;
endclass
